2007-04-23  Bastien Nocera  <hadess@hadess.net>

	* lib/ephy-file-helpers.c: (xdg_user_dir_lookup),
	(ephy_file_downloads_dir_from_xdg), (ephy_file_downloads_dir):
	Use xdg-user-dirs to get a better default Downloads directory
	(Closes: #415342)

2007-04-20  Bastien Nocera  <hadess@hadess.net>

	* data/mime-types-permissions.xml: Add "application/x-quicktimeplayer"
	and "application/x-quicktime-media-link" to the safe mime-types
	(Closes: #431665)

2007-04-16  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Middle clicking the Go button should open the location bar address
	content in a new tab. Bug #362591.

2007-04-09  Christian Persch  <chpe@gnome.org>

	* data/glade/print.glade:
	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintService.h:

	Fix printing of frames.

2007-04-02  Diego Escalante Urrelo <diegoe@gnome.org>

	* src/bookmarks/ephy-topic-action.c:

	Allow the user to select a different bookmark topic on the toolbar by
	just moving the mouse. Old behaviour forced the user to click each
	topic button to activate the menu, now only the first click is
	required. Bug #363848. Patch by John Millikin.

2007-03-29  Christian Persch  <chpe@gnome.org>

	* lib/ephy-password-dialog.c: (ephy_password_dialog_constructor):

	#if 0 some currently unused code. Bug #423907.

2007-03-25  Christian Persch  <chpe@gnome.org>

	* src/ephy-statusbar.c: (create_statusbar_progress):

	Make progressbar taller. Bug #421060.

2007-03-16  Bastien Nocera  <hadess@hadess.net>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	Fix Epiphany not finding some Gecko plugins when
	running in a multilib environment (Closes: #407419)

2007-03-12  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:

	Add translator's comment for 'token'.

2007-03-12  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoCookiePromptService.cpp:
	* embed/mozilla/GeckoCookiePromptService.h: