@@ -1,3 +1,8 @@
+2007-04-24  Diego Escalante Urrelo <diegoe@gnome.org>
+
+	* embed/ephy-embed-dialog.c:
+	Fix some strict-aliasing warnings.
+
 2007-04-23  Bastien Nocera  <hadess@hadess.net>
 
 	* lib/ephy-file-helpers.c: (xdg_user_dir_lookup),
